Changed from byte[] to ByteBuffer